[package]
name = "rust-practice"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
 num_cpus = "1.14.0"

[[bin]]
name = "basics"
path = "src/bin/basics.rs"

[[bin]]
name = "expressions"
path = "src/bin/expressions.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "structs"
path = "src/bin/structs.rs"


[[bin]]
name = "enums"
path = "src/bin/enums.rs"

[[bin]]
name = "concurrency"
path = "src/bin/concurrency.rs"


[[bin]]
name = "macros"
path = "src/bin/macro.rs"
